kubernetes/hive-metastore.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-metastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-metastore
  template:
    metadata:
      labels:
        app: hive-metastore
    spec:
      containers:
        - name: hive-metastore
          image: sslhep/hive-metastore:3.1.3
---
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
spec:
  selector:
    app: hive-metastore
  ports:
    - port: 9083
      targetPort: 9083
