kubernetes/jupyter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
        - name: jupyter
          image: jupyter/pyspark-notebook:latest
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: jupyter-notebooks
              mountPath: /home/jovyan/work
      volumes:
        - name: jupyter-notebooks
          persistentVolumeClaim:
            claimName: jupyter-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  selector:
    app: jupyter
  ports:
    - port: 8888
      targetPort: 8888
