kubernetes/spark.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
        - name: spark-master
          image: bitnami/spark:3.3.0
          ports:
            - containerPort: 8080
            - containerPort: 7077
          volumeMounts:
            - name: spark-defaults
              mountPath: /opt/bitnami/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
      volumes:
        - name: spark-defaults
          configMap:
            name: spark-config-cm
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  selector:
    app: spark-master
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: master
      port: 7077
      targetPort: 7077
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: bitnami/spark:3.3.0
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: spark-defaults
              mountPath: /opt/bitnami/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
      volumes:
        - name: spark-defaults
          configMap:
            name: spark-config-cm
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker
spec:
  selector:
    app: spark-worker
  ports:
    - name: webui
      port: 8081
      targetPort: 8081
