kubernetes/trino.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino
  template:
    metadata:
      labels:
        app: trino
    spec:
      containers:
        - name: trino
          image: trinodb/trino:418
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: trino-config
              mountPath: /etc/trino
            - name: trino-catalog
              mountPath: /etc/trino/catalog
      volumes:
        - name: trino-config
          configMap:
            name: trino-config-cm
        - name: trino-catalog
          configMap:
            name: trino-catalog-cm
---
apiVersion: v1
kind: Service
metadata:
  name: trino
spec:
  selector:
    app: trino
  ports:
    - port: 8080
      targetPort: 8080
